z-index of navBar fixed

--- a/src/Components/External.css
+++ b/src/Components/External.css
@@ -12,6 +12,7 @@
 }
 .bp3-navbar{
   position: fixed !important;
+  z-index: 950 !important;
 }
 
 .bp3-overlay{
